--- a/index.html
+++ b/index.html
@@ -34,12 +34,12 @@
   </ul>
 </li>
         
-        <li><a href="#">About</a></li>
-        <li><a href="#">Portfolio</a></li>
-        <li><a href="#">Services</a></li>
-        <li><a href="#">Resume</a></li>
-        <li><a href="#">Blog</a></li>
-        <li><a href="#">Contact</a></li>
+        <li><a href="#my-bio">About</a></li>
+        <li><a href="#portfolio-head">Portfolio</a></li>
+        <li><a href="#care">Services</a></li>
+        <li><a href="#proceed">Resume</a></li>
+        <li><a href="#blog">Blog</a></li>
+        <li><a href="#contact-end">Contact</a></li>
         </ul>
     </ul></div>
 </div>
@@ -59,7 +59,7 @@
 </div></div>
 
 
-    <div class="bio-wrapper">
+    <div class="bio-wrapper" id="my-bio">
   <div class="bio-box" ><img class="img-square"  src="./img/dots.png" alt="">
  
      <div class="img-container"> <img class="img-bio" data-aos="fade-up" data-aos-delay="100" src="./img/image_1_long.jpg (1).webp" alt=""></div>
@@ -120,7 +120,7 @@
 
 
 <!-- My Pirtfolio -->
-<div id="portfolio-head" class="portfolio1" data-aos="fade-up"> <span>My</span> <span>Portfolio</span></div>
+<div class="portfolio1" data-aos="fade-up"> <span  id="portfolio-head">My</span> <span>Portfolio</span></div>
 
 
 
@@ -166,7 +166,7 @@
 
 
 <!-- Services --> 
- <div class="service " data-aos="fade-up" data-aos-delay="100"><span >Services</span></div>
+ <div class="service " data-aos="fade-up" data-aos-delay="100"><span  id="care">Services</span></div>
 
 <div class="services-box-head">
   <div class="services-box"data-aos="fade-up" data-aos-delay="100">
@@ -211,7 +211,7 @@
 
 <!-- Resume -->
 
-<div  class="resume-one"><span class="resume-two"data-aos="fade-up" >Resume</span></div>
+<div id="proceed" class="resume-one"><span class="resume-two"data-aos="fade-up" >Resume</span></div>
 
 
 
@@ -334,7 +334,7 @@
 <!-- Read on Medium -->
 
 <div class="medium-head-box">
-<div  class="medium"><span class="medium-one"data-aos="fade-up" >Read on Medium</span></div>
+<div id="blog" class="medium"><span class="medium-one"data-aos="fade-up" >Read on Medium</span></div>
 
 <div class="medium-box" data-aos="fade-up" data-aos-delay="100">
   <div class="medium-size">
@@ -377,7 +377,7 @@
 
 <!-- Contact Me -->
 
-<div  class="contact"><span class="contact-first"data-aos="fade-up" >Contact Me</span></div>
+<div id="contact-end"  class="contact"><span class="contact-first"data-aos="fade-up" >Contact Me</span></div>
 
 <div class="contact-container" data-aos="fade-up" data-aos-delay="200">
   <div class="contact-wrapper">
